Blurry button fix
Drop shadows were the problem

--- a/less/components.less
+++ b/less/components.less
@@ -23,14 +23,11 @@
     background: #79a94b;
     vertical-align: middle;
     cursor: pointer;
-    border: 2px solid #689240;
-    border-radius: 5px;
+    border: .1em solid #689240;
+    border-radius: .3em;
     white-space: nowrap;
-    -webkit-filter: drop-shadow(0 1px 1px rgba(0,0,0,.1));
-    -moz-filter: drop-shadow(0 1px 1px rgba(0,0,0,.1));
-    -ms-filter: drop-shadow(0 1px 1px rgba(0,0,0,.1));
-    -o-filter: drop-shadow(0 1px 1px rgba(0,0,0,.1));
-    filter: drop-shadow(0 1px 1px rgba(0,0,0,.1));
+    
+    // Color transition
     -webkit-transition: background-color .2s ease-out;
     -webkit-transition-property: background-color;
     -webkit-transition-duration: .2s;
