--- a/less/sections.less
+++ b/less/sections.less
@@ -138,11 +138,6 @@ header {
 #summary .btn, .slider .btn {
     background: transparent;
     border: 2px solid #FCFCFC;
-    -webkit-filter: drop-shadow(0 1px 1px rgba(0,0,0,.3));
-    -moz-filter: drop-shadow(0 1px 1px rgba(0,0,0,.3));
-    -ms-filter: drop-shadow(0 1px 1px rgba(0,0,0,.3));
-    -o-filter: drop-shadow(0 1px 1px rgba(0,0,0,.3));
-    filter: drop-shadow(0 1px 1px rgba(0,0,0,.3));
     -webkit-transition: background-color .2s ease-out;
     -webkit-transition-property: background-color;
     -webkit-transition-duration: .2s;
